<resources>
    <string name="app_name">uChat</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_hide_password">Show/Hide password</string>
    <string name="empty_fields_message">There\'re empty fields</string>
    <string name="login_error_message">There was an error in the login: %s</string>
    <string name="sign_in_error_message">There was an error when registering a user: %s</string>
    <string name="sign_in_success_message">User successfully created</string>
</resources>
